<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_map"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_blank"
        android:enabled="false"
        android:title="@string/blank"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>