<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_profile_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/logo_animation" />


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/greetings_auth_page"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:alpha="0"
            tools:alpha="100"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondary"
            android:textSize="25sp"
            android:alpha="0"
            tools:alpha="100"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="auth"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <com.example.androidintermediate.views.customview.EditTextClear
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_input"
        android:hint="@string/text_name"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="email"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.example.androidintermediate.views.customview.EditTextEmail
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_input"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="email"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.example.androidintermediate.views.customview.EditTextPassword
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_form_input"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:transitionName="password"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_signin_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <LinearLayout
        android:id="@+id/containerMisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:transitionName="misc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register">

        <TextView
            android:id="@+id/tv_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auth_question_register"
            android:textColor="@color/white"
            android:alpha="0"
            tools:alpha="100"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_login"
            android:textColor="@color/colorSecondaryAccent"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>