<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.DetailActivity">

    <ImageView
        android:id="@+id/default_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/content_description_avatar"
        android:transitionName="user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile_white" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/person_name"
        android:textSize="18sp"
        android:transitionName="user_name"
        app:layout_constraintBottom_toBottomOf="@+id/default_avatar"
        app:layout_constraintStart_toEndOf="@+id/default_avatar"
        app:layout_constraintTop_toTopOf="@+id/default_avatar" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:lineHeight="25dp"
        android:maxLines="3"
        android:text="@string/text_description"
        android:textSize="14sp"
        android:transitionName="story_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_image_story"
        android:transitionName="story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineHeight="25dp"
                android:text="@string/text_description"
                android:textSize="14sp"
                android:transitionName="story_description"
                tools:targetApi="p" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

    <TextView
        android:id="@+id/story_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/uploaded_date"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="italic"
        android:transitionName="story_upload_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>