<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/label_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/text_uploaded_story"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView

                    android:id="@+id/btn_info_story"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/description_btn_info"
                    android:paddingVertical="5dp"
                    android:src="@drawable/ic_info"
                    app:tint="@color/colorSecondaryDark" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/loading_story"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/null_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/text_empty_data"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="3"
                tools:listitem="@layout/item_history" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>